可使用makefile与gdb调试

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,50 +1,26 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Debug",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "linux": {
-        "MIMode": "gdb",
-        "miDebuggerPath": "gdb",
-        "program": "${workspaceFolder}/output/main"
-      },
-      "osx": {
-        "MIMode": "lldb",
-        "miDebuggerPath": "lldb-mi",
-        "program": "${workspaceFolder}/output/main"
-      },
-      "windows": {
-        "MIMode": "gdb",
-        "miDebuggerPath": "gdb.exe",
-        "program": "${workspaceFolder}/output/main.exe"
-      },
-      "preLaunchTask": "build"
-    },
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/study/vscode/Project/dsacpp/src",
-      "program": "d:/study/vscode/Project/dsacpp/src/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
+    "version": "0.2.0",
+    "configurations": [
         {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
+            "name": "gdb 调试 main", // 调试配置名称
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/output/main", // 关键：指向编译生成的可执行文件
+            "args": [], // 调试时传递的参数（无则留空）
+            "stopAtEntry": false, // 是否在程序入口处暂停（默认false）
+            "cwd": "${workspaceFolder}", // 调试时的工作目录（项目根目录）
+            "environment": [],
+            "externalConsole": false, // 是否使用外部终端（默认false，用VS Code内置终端）
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: make 生成活动文件", // 关键：关联编译任务（必须和tasks.json的label一致）
+            "miDebuggerPath": "/usr/bin/gdb" // gdb路径（默认通常是这个，可根据实际修改）
         }
-      ]
-    }
-  ]
+    ]
 }
