--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,97 +1,14 @@
 {
-    "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
-            "type": "shell",
-            "group": "build",
-            "windows": {
-                "command": "powershell",
-                "args": [
-                    "-c",
-                    "mingw32-make"
-                ]
-            },
-            "linux": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "make"
-                ]
-            },
-            "osx": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "make"
-                ]
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "build & run",
-            "type": "shell",
-            "windows": {
-                "command": "powershell",
-                "args": [
-                    "-c",
-                    "'mingw32-make run'"
-                ]
-            },
-            "linux": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "'make run'"
-                ]
-            },
-            "osx": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "'make run'"
-                ]
-            }
-        },
-        {
-            "label": "clean",
-            "type": "shell",
-            "windows": {
-                "command": "powershell",
-                "args": [
-                    "-c",
-                    "'mingw32-make clean'"
-                ]
-            },
-            "linux": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "'make clean'"
-                ]
-            },
-            "osx": {
-                "command": "bash",
-                "args": [
-                    "-c",
-                    "'make clean'"
-                ]
-            }
-        },
-        {
             "type": "cppbuild",
-            "label": "C/C++: g++.exe 生成活动文件",
-            "command": "D:/study/tool/msys/mingw64/bin/g++.exe",
+            "label": "C/C++: make 生成活动文件",
+            "command": "/usr/bin/make", // 执行make命令
             "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                ""
+                "all" // 对应Makefile中的all目标（如果你的Makefile目标名不同，需修改）
             ],
             "options": {
-                "cwd": "D:/study/tool/msys/mingw64/bin"
+                "cwd": "${workspaceFolder}" // 工作目录为项目根目录（Makefile所在位置）
             },
             "problemMatcher": [
                 "$gcc"
@@ -100,7 +17,8 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "编译器: D:/study/tool/msys/mingw64/bin/g++.exe"
+            "detail": "执行Makefile编译所有文件"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
